# rag-fixed-income-covenants

./: .gitignore  main.py  pyproject.toml
.claude/: claude.md
.github/workflows/: deploy_lambdas.yml  deploy_s3_file_lister.yml  deploy_textract_extractor.yml
src/lambda_functions/embeddings_generator/: README.md  bedrock_operations.py  constants.py  handler.py  lambda_handler.py  processor.py  requirements.txt  s3_operations.py  test_handler.py  text_chunker.py  textract_operations.py
src/lambda_functions/s3_file_lister/: deploy_lambdas.yml  handler.py
src/lambda_functions/textract_extractor/: README.md  conftest.py  constants.py  handler.py  s3_operations.py  test_handler.py  text_extractor_handler.py
src/lambda_functions/textract_extractor/dependencies/: constants.py  dynamodb_operations.py  s3_operations.py  sqs_operations.py  textract_operations.py
src/lambda_functions/textract_extractor/tests/: test_text_extractor_handler.py
src/local_rag_implementation/: README.md  example_usage.py
src/local_rag_implementation/rag_system/: __init__.py  bedrock_llm.py  document.py  document_processor.py  embedding_model.py  vector_store.py
src/test_function/: main_file.py
src/test_function/folder_1/: __init__.py  task_1.py
src/test_function/pypdf2_test/: attempt_1.py
